Разметка 2 страниц глейси

--- a/index.html
+++ b/index.html
@@ -2,11 +2,132 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+    <header>
+      <div class="container">
+        <div class="header-logo">
+          <img src="#">
+        </div>
+        <nav class="main-navigation">
+          <ul>
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Доставка и оплата</a></li>
+            <li><a href="#">О Компании</a></li>
+          </ul>
+        </nav>
+        <div class="user-block">
+          <div class="header-search">
+            <a href="#">Поиск</a>
+          </div>
+          <div class="header-login">
+            <a href="#">Вход</a>
+          </div>
+          <div class="header-basket">
+            <a href="#">Пусто</a>
+          </div>
+        </div>
+        <section class="working-hours">
+          <p>С 10 до 20, ежедневно</p>
+          <p>8 812 450-25-25</p>
+        </section>
+      </div>
+    </header>
+    <main class="container">
+      <div class="slider-bar">
+        <img src="#">
+        <h2>Крем-брюле и пломбир с малиновым джемом</h2>
+        <a href="#">Давайте оба!</a>
+        <div class="slider">
+          <a href="#">1</a>
+          <a href="#">2</a>
+          <a href="#">3</a>
+        </div>
+      </div>
+      <div class="banners">
+        <div class="banners-first">
+          <h3>Малинка даром!</h3>
+          <p>При покупке 2 кг любого фруктового мороженного, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+          <a class="button" href="#">Хочу варенье!</a>
+        </div>
+        <div class="banners-second">
+          <h3>Шоколадки даром!</h3>
+          <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+          <a class="button" href="#">Хочу шоколадки!</a>
+        </div>
+      </div>
+      <div class="hits">
+        <section>
+          <img src="#">
+          <p>310 <span>Р</span>/кг</p>
+          <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+        </section>
+        <section>
+          <img src="#">
+          <p>380 <span>Р</span>/кг</p>
+          <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+        </section>
+        <section>
+          <img src="#">
+          <p>355 <span>Р</span>/кг</p>
+          <a href="#">Сливочно-клубничное с присыпкой из белго шоколада</a>
+        </section>
+        <section>
+          <img src="#">
+          <p>415 <span>Р</span>/кг</p>
+          <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+        </section>
+      </div>
+      <article class="gllace-about">
+        <h4>Магазин Глейси - это онлайн и офлайн магазин по продаже мороженного собственного производства на развес</h4>
+        <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+        <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингридиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+        <p>Закупа ингридиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+        <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+      </article>
+      <section class="blog-news">
+        <img src="#">
+        <p>Новое в нашем блоге</p>
+        <a href="#">10 способов сервировки фруктовых щербетов к столу</a>
+      </section>
+      <div class="delivery">
+        <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+        <form>
+          <input type="text" name="e-mail" placeholder="Электронная почта">
+          <button>Отправить</button>
+        </form>
+      </div>
+      <div class="map-block">
+        <img src="#">
+        <div class="feedback">
+          <p>Адрес главного офиса и офлайн магазина:</p>
+          <p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
+          <p>Для заказов по телфону:</p>
+          <p>8 812 450-25-25</p>
+          <p>(с 10 до 20 ежедневно)</p>
+          <a class="button" href="#">Форма обратной связи</a>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="container">
+        <div class="social-block">
+          <a href="#"><img src="#">Twitter</a>
+          <a href="#"><img src="#">Instagram</a>
+          <a href="#"><img src="#">Facebook</a>
+          <a href="#"><img src="#">VK</a>
+        </div>
+        <div class="helpful-information">
+          <a href="#">Для поставщиков</a>
+          <a href="#">О производстве</a>
+          <a href="#">Наши документы</a>
+          <a href="#">Экологические стандарты</a>
+        </div>
+        <div class="copyright">
+          <img src="#">
+          <p>Сделано в <a href="#">HTML Academy ©</a>2017</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
