--- a/catalog.html
+++ b/catalog.html
@@ -2,12 +2,14 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Глейси ассортимент</title>
   </head>
   <body>
     <header>
       <div class="container">
         <div class="header-logo">
-          <img src="#">
+          <img src="img/header-logo.png" alt="Логотип" width="154" height="64">
         </div>
         <nav class="main-navigation">
           <ul>
@@ -82,74 +84,74 @@
       </div>
       <div class="cremy-item">
         <section>
-          <img src="#">
-          <p>310<span>Р</span>/кг</p>
+          <img src="img/catalog-item1.png" alt="Товар1" width="200" height="200">
+          <p>310/кг</p>
           <a href="#">Сливочное с апельсиновым джемом и цитросовой стружкой</a>
           <a class="button" href="#">Быстрый Просмотр</a>
         </section>
         <section>
-          <img src="#">
-          <p>380<span>Р</span>/кг</p>
+          <img src="img/catalog-item2.png" alt="Товар2" width="200" height="200">
+          <p>380/кг</p>
           <a href="#">Сливочно-кофейное с кусочками шоколада</a>
           <a class="button" href="#">Быстрый Просмотр</a>
         </section>
         <section>
-          <img src="#">
-          <p>355<span>Р</span>/кг</p>
+          <img src="img/catalog-item3.png" alt="Товар3" width="200" height="200">
+          <p>355/кг</p>
           <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
           <a class="button" href="#">Быстрый Просмотр</a>
         </section>
         <section>
-          <img src="#">
-          <p>415<span>Р</span>/кг</p>
+          <img src="img/catalog-item4.png" alt="Товар4" width="200" height="200">
+          <p>415/кг</p>
           <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
           <a class="button" href="#">Быстрый Просмотр</a>
         </section>
         <section>
-          <img src="#">
-          <p>325<span>Р</span>/кг</p>
+          <img src="img/catalog-item21.png" alt="Товар21" width="200" height="200">
+          <p>325/кг</p>
           <a href="#">Сливочное с брусничным джемом</a>
           <a class="button" href="#">Быстрый Просмотр</a>
         </section>
         <section>
-          <img src="#">
-          <p>410<span>Р</span>/кг</p>
+          <img src="img/catalog-item22.png" alt="Товар22" width="200" height="200">
+          <p>410/кг</p>
           <a href="#">Сливочное-черничное с цельными ягодами черники</a>
           <a class="button" href="#">Быстрый Просмотр</a>
         </section>
         <section>
-          <img src="#">
-          <p>375<span>Р</span>/кг</p>
+          <img src="img/catalog-item23.png" alt="Товар23" width="200" height="200">
+          <p>375/кг</p>
           <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
           <a class="button" href="#">Быстрый Просмотр</a>
         </section>
         <section>
-          <img src="#">
-          <p>320<span>Р</span>/кг</p>
+          <img src="img/catalog-item24.png" alt="Товар24" width="200" height="200">
+          <p>320/кг</p>
           <a href="#">Сливочное с шоколадной стружкой</a>
           <a class="button" href="#">Быстрый Просмотр</a>
         </section>
         <section>
-          <img src="#">
-          <p>440<span>Р</span>/кг</p>
+          <img src="img/catalog-item31.png" alt="Товар31" width="200" height="200">
+          <p>440/кг</p>
           <a href="#">Сливочно-ванильное с кусочками шоколада</a>
           <a class="button" href="#">Быстрый Просмотр</a>
         </section>
         <section>
-          <img src="#">
-          <p>435<span>Р</span>/кг</p>
+          <img src="img/catalog-item32.png" alt="Товар32" width="200" height="200">
+          <p>435/кг</p>
           <a href="#">Сливочное с ментоловым сиропом</a>
           <a class="button" href="#">Быстрый Просмотр</a>
         </section>
         <section>
-          <img src="#">
-          <p>355<span>Р</span>/кг</p>
+          <img src="img/catalog-item33.png" alt="Товар33" width="200" height="200">
+          <p>355/кг</p>
           <a href="#">Сливочное с кусочками черного шоколада</a>
           <a class="button" href="#">Быстрый Просмотр</a>
         </section>
         <section>
-          <img src="#">
-          <p>420<span>Р</span>/кг</p>
+          <img src="img/catalog-item34.png" alt="Товар34" width="200" height="200">
+          <p>420/кг</p>
           <a href="#">Сливочное с мятным сиропом</a>
           <a class="button" href="#">Быстрый Просмотр</a>
         </section>
