--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Глейси</title>
   </head>
   <body>
     <header>
       <div class="container">
         <div class="header-logo">
-          <img src="#">
+          <img src="img/header-logo.png" alt="Логотип" width="154" height="64">
         </div>
         <nav class="main-navigation">
           <ul>
@@ -36,7 +38,7 @@
     <main class="container">
       <div class="slider-bar">
         <img src="#">
-        <h2>Крем-брюле и пломбир с малиновым джемом</h2>
+        <div>Крем-брюле и пломбир с малиновым джемом</div>
         <a href="#">Давайте оба!</a>
         <div class="slider">
           <a href="#">1</a>
@@ -46,40 +48,40 @@
       </div>
       <div class="banners">
         <div class="banners-first">
-          <h3>Малинка даром!</h3>
+          <span>Малинка даром!</span>
           <p>При покупке 2 кг любого фруктового мороженного, добавим в ваш заказ банку малинового варенья бесплатно.</p>
           <a class="button" href="#">Хочу варенье!</a>
         </div>
         <div class="banners-second">
-          <h3>Шоколадки даром!</h3>
+          <span>Шоколадки даром!</span>
           <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
           <a class="button" href="#">Хочу шоколадки!</a>
         </div>
       </div>
       <div class="hits">
         <section>
-          <img src="#">
-          <p>310 <span>Р</span>/кг</p>
+          <img src="img/hit1.png" alt="Сливочное с апельсиновым джемом" width="200" height="200">
+          <p>310/кг</p>
           <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
         </section>
         <section>
-          <img src="#">
-          <p>380 <span>Р</span>/кг</p>
+          <img src="img/hit2.png" alt="Сливочнокофейное" width="200" height="200">
+          <p>380/кг</p>
           <a href="#">Сливочно-кофейное с кусочками шоколада</a>
         </section>
         <section>
-          <img src="#">
-          <p>355 <span>Р</span>/кг</p>
+          <img src="img/hit3.png" alt="Сливочноклубничное" width="200" height="200">
+          <p>355/кг</p>
           <a href="#">Сливочно-клубничное с присыпкой из белго шоколада</a>
         </section>
         <section>
-          <img src="#">
-          <p>415 <span>Р</span>/кг</p>
+          <img src="img/hit4.png" alt="Сливочное крем-брюле" width="200" height="200">
+          <p>415/кг</p>
           <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
         </section>
       </div>
       <article class="gllace-about">
-        <h4>Магазин Глейси - это онлайн и офлайн магазин по продаже мороженного собственного производства на развес</h4>
+        <h3>Магазин Глейси - это онлайн и офлайн магазин по продаже мороженного собственного производства на развес</h3>
         <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
         <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингридиенты и добавки произведены из натурального, экологически чистого сырья.</p>
         <p>Закупа ингридиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
