--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <div class="container">
+      <div class="container clearfix">
         <div class="header-logo">
           <img src="img/header-logo.png" alt="Логотип" width="154" height="64">
         </div>
@@ -19,114 +19,115 @@
           </ul>
         </nav>
         <div class="user-block">
-          <div class="header-search">
-            <a href="#">Поиск</a>
-          </div>
-          <div class="header-login">
-            <a href="#">Вход</a>
-          </div>
-          <div class="header-basket">
-            <a href="#">Пусто</a>
-          </div>
+          <a class="header-search" href="#">Поиск</a>
+          <a class="header-login" href="#">Вход</a>
+          <a class="header-basket" href="#">Пусто</a>
         </div>
-        <section class="working-hours">
-          <p>С 10 до 20, ежедневно</p>
-          <p>8 812 450-25-25</p>
-        </section>
       </div>
     </header>
-    <main class="container">
-      <div class="slider-bar">
-        <img src="#">
-        <div>Крем-брюле и пломбир с малиновым джемом</div>
-        <a href="#">Давайте оба!</a>
-        <div class="slider">
-          <a href="#">1</a>
-          <a href="#">2</a>
-          <a href="#">3</a>
+    <main>
+      <div class="container clearfix">
+        <div class="clearfix">
+          <section class="index-working-hours">
+            <p>С 10 до 20, ежедневно</p>
+            <p>8 812 450-25-25</p>
+          </section>
         </div>
-      </div>
-      <div class="banners">
-        <div class="banners-first">
-          <span>Малинка даром!</span>
-          <p>При покупке 2 кг любого фруктового мороженного, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-          <a class="button" href="#">Хочу варенье!</a>
+        <div class="slider-bar">
+          <div class="slider-logo">Крем-брюле и пломбир с малиновым джемом</div>
+          <a class="slider-btn" href="#">Давайте оба!</a>
         </div>
-        <div class="banners-second">
-          <span>Шоколадки даром!</span>
-          <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-          <a class="button" href="#">Хочу шоколадки!</a>
+        <div class="banners clearfix">
+          <div class="banners-first">
+            <p class="banners-tagline">Малинка даром!</p>
+            <p class="banners-promo">При покупке 2 кг любого фруктового мороженного, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+            <a class="button" href="#">Хочу варенье!</a>
+          </div>
+          <div class="banners-second">
+            <p class="banners-tagline">Шоколадки даром!</p>
+            <p class="banners-promo">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+            <a class="button" href="#">Хочу шоколадки!</a>
+          </div>
         </div>
-      </div>
-      <div class="hits">
-        <section>
-          <img src="img/hit1.png" alt="Сливочное с апельсиновым джемом" width="200" height="200">
-          <p>310/кг</p>
-          <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-        </section>
-        <section>
-          <img src="img/hit2.png" alt="Сливочнокофейное" width="200" height="200">
-          <p>380/кг</p>
-          <a href="#">Сливочно-кофейное с кусочками шоколада</a>
-        </section>
-        <section>
-          <img src="img/hit3.png" alt="Сливочноклубничное" width="200" height="200">
-          <p>355/кг</p>
-          <a href="#">Сливочно-клубничное с присыпкой из белго шоколада</a>
-        </section>
-        <section>
-          <img src="img/hit4.png" alt="Сливочное крем-брюле" width="200" height="200">
-          <p>415/кг</p>
-          <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
-        </section>
-      </div>
-      <article class="gllace-about">
-        <h3>Магазин Глейси - это онлайн и офлайн магазин по продаже мороженного собственного производства на развес</h3>
-        <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-        <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингридиенты и добавки произведены из натурального, экологически чистого сырья.</p>
-        <p>Закупа ингридиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-        <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
-      </article>
-      <section class="blog-news">
-        <img src="#">
-        <p>Новое в нашем блоге</p>
-        <a href="#">10 способов сервировки фруктовых щербетов к столу</a>
-      </section>
-      <div class="delivery">
-        <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-        <form>
-          <input type="text" name="e-mail" placeholder="Электронная почта">
-          <button>Отправить</button>
-        </form>
-      </div>
-      <div class="map-block">
-        <img src="#">
-        <div class="feedback">
-          <p>Адрес главного офиса и офлайн магазина:</p>
-          <p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
-          <p>Для заказов по телфону:</p>
-          <p>8 812 450-25-25</p>
-          <p>(с 10 до 20 ежедневно)</p>
-          <a class="button" href="#">Форма обратной связи</a>
+        <div class="hits clearfix">
+          <section>
+            <div class="hits-image">
+              <img src="img/item1.jpg" alt="Сливочное с апельсиновым джемом" width="267" height="267">
+              <p>310<span>Р</span>/кг</p>
+            </div>
+            <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+          </section>
+          <section>
+            <div class="hits-image">
+              <img src="img/item2.jpg" alt="Сливочнокофейное" width="267" height="267">
+              <p>380<span>Р</span>/кг</p>
+            </div>
+            <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+          </section>
+          <section>
+            <div class="hits-image">
+              <img src="img/item3.jpg" alt="Сливочноклубничное" width="265" height="267">
+              <p>355<span>Р</span>/кг</p>
+            </div>
+            <a href="#">Сливочно-клубничное с присыпкой из белго шоколада</a>
+          </section>
+          <section>
+            <div class="hits-image">
+              <img src="img/item4.jpg" alt="Сливочное крем-брюле" width="267" height="267">
+              <p>415<span>Р</span>/кг</p>
+            </div>
+            <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+          </section>
+        </div>
+        <article class="gllace-about clearfix">
+          <h3>Магазин Глейси - это онлайн и офлайн магазин по продаже мороженного собственного производства на развес</h3>
+          <p class="gllace-advantage">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+          <p class="gllace-advantage">Закупка ингридиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+          <p class="gllace-advantage">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингридиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+          <p class="gllace-advantage">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+        </article>
+        <div class="clearfix">
+          <section class="blog-news">
+            <p class="blog-news-title">Новое в нашем блоге</p>
+            <p class="blog-news-item"><a href="#">10 способов сервировки фруктовых щербетов к столу</a></p>
+          </section>
+          <div class="delivery">
+            <form method="get">
+              <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+              <input type="text" name="e-mail" placeholder="Электронная почта">
+              <button>Отправить</button>
+            </form>
+          </div>
+        </div>
+        <div class="map-block">
+          <div class="map">
+            <section class="feedback">
+              <p>Адрес главного офиса и офлайн магазина:
+              <strong>ул. Большая Конюшенная 19/8, Санкт-Петербург</strong></p>
+              <p>Для заказов по телфону:
+              <strong>8 812 450-25-25</strong>
+              (с 10 до 20 ежедневно)</p>
+              <a class="button" href="#">Форма обратной связи</a>
+            </section>
         </div>
       </div>
     </main>
     <footer>
-      <div class="container">
+      <div class="container clearfix">
         <div class="social-block">
           <a href="#"><img src="#">Twitter</a>
           <a href="#"><img src="#">Instagram</a>
           <a href="#"><img src="#">Facebook</a>
           <a href="#"><img src="#">VK</a>
         </div>
-        <div class="helpful-information">
-          <a href="#">Для поставщиков</a>
-          <a href="#">О производстве</a>
-          <a href="#">Наши документы</a>
-          <a href="#">Экологические стандарты</a>
-        </div>
+        <ul class="helpful-information">
+          <li><a href="#">Для поставщиков</a></li>
+          <li><a href="#">О производстве</a></li>
+          <li><a href="#">Наши документы</a></li>
+          <li><a href="#">Экологические стандарты</a></li>
+        </ul>
         <div class="copyright">
-          <img src="#">
+          <img src="img/htmllogo-footer.png" alt="HTML Academy">
           <p>Сделано в <a href="#">HTML Academy ©</a>2017</p>
         </div>
       </div>
